projects links added

--- a/index.html
+++ b/index.html
@@ -87,32 +87,32 @@
         <h2>Project</h2>
         <div class="project-container">
             <div class="project-card">
-                <img class="project-image" src="assets/images/project-image1.png" alt="project Image I">
+                <img class="project-image"  src="assets/images/project-image1.png" alt="project Image I">
                 <h3>Project I</h3>
-                <p class="subtext">This is my project I</p>
+                <p class="subtext">Password generator</p>
                 <hr>
-                <p class="subtext">View Here</p>
+                <p class="subtext"><a href="https://github.com/Morganbb104/Passwords_generator">View Here</a></p>
             </div>
             <div class="project-card">
                 <img class="project-image" src="assets/images/project-image2.png" alt="project Image II">
                 <h3>Project II</h3>
-                <p class="subtext">This is my project II</p>
+                <p class="subtext">Work Day Sceduler</p>
                 <hr>
-                <p class="subtext">View Here</p>
+                <p class="subtext"><a href="https://github.com/Morganbb104/Work-Day-Scheduler">View Here</a></p>
             </div>
             <div class="project-card">
                 <img class="project-image" src="assets/images/project-image3.png" alt="project Image III">
                 <h3>Project III</h3>
-                <p class="subtext">This is my project III</p>
+                <p class="subtext">Code Quiz</p>
                 <hr>
-                <p class="subtext">View Here</p>
+                <p class="subtext"><a href="https://github.com/Morganbb104/Code_Quiz">View Here</a></p>
             </div>
             <div class="project-card">
                 <img class="project-image" src="assets/images/project-image4.png" alt="project Image IV">
                 <h3>Project IV</h3>
-                <p class="subtext">This is my project IV</p>
+                <p class="subtext">Movie Tracker</p>
                 <hr>
-                <p class="subtext">View Here</p>
+                <p class="subtext"><a href="https://github.com/Morganbb104/Project-movieTracker">View Here</a></p>
             </div>
         </div>
     </section>
