pics links added

--- a/index.html
+++ b/index.html
@@ -87,29 +87,37 @@
         <h2>Project</h2>
         <div class="project-container">
             <div class="project-card">
-                <img class="project-image"  src="assets/images/project-image1.png" alt="project Image I">
-                <h3>Project I</h3>
+                <a href="https://github.com/Morganbb104/Passwords_generator">
+                    <img class="project-image"  src="assets/images/project-image1.png" alt="project Image I" href="">
+                </a>
+                <h3>Personal Project I</h3>
                 <p class="subtext">Password generator</p>
                 <hr>
                 <p class="subtext"><a href="https://github.com/Morganbb104/Passwords_generator">View Here</a></p>
             </div>
             <div class="project-card">
-                <img class="project-image" src="assets/images/project-image2.png" alt="project Image II">
-                <h3>Project II</h3>
+                <a href="https://github.com/Morganbb104/Work-Day-Scheduler">
+                    <img class="project-image" src="assets/images/project-image2.png" alt="project Image II" href="">
+                </a>
+                <h3>Personal Project II</h3>
                 <p class="subtext">Work Day Sceduler</p>
                 <hr>
                 <p class="subtext"><a href="https://github.com/Morganbb104/Work-Day-Scheduler">View Here</a></p>
             </div>
             <div class="project-card">
-                <img class="project-image" src="assets/images/project-image3.png" alt="project Image III">
-                <h3>Project III</h3>
+                <a href="https://github.com/Morganbb104/Code_Quiz">
+                    <img class="project-image" src="assets/images/project-image3.png" alt="project Image III" href="">
+                </a>
+                <h3>Personal Project III</h3>
                 <p class="subtext">Code Quiz</p>
                 <hr>
                 <p class="subtext"><a href="https://github.com/Morganbb104/Code_Quiz">View Here</a></p>
             </div>
             <div class="project-card">
-                <img class="project-image" src="assets/images/project-image4.png" alt="project Image IV">
-                <h3>Project IV</h3>
+                <a href="https://github.com/Morganbb104/Project-movieTracker">
+                    <img class="project-image" src="assets/images/project-image4.png" alt="project Image IV"  href="'">
+                </a>
+                <h3>Group Project</h3>
                 <p class="subtext">Movie Tracker</p>
                 <hr>
                 <p class="subtext"><a href="https://github.com/Morganbb104/Project-movieTracker">View Here</a></p>
